--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       content="Web site created using create-react-app"
       data-rh="true"
     />
+    <meta name="google-site-verification" content="YOW_w-6J1ZFomxIenS3HojWPgpbLIlYT4fLsxb82uM0" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
